# ROS-Unipa

./: README.md
about_git/: README.md
docs/ppt/: ROS_Concepts.pptx
ex01/: Exercise01.md  README.md
ex01/kinematic_unicycle/: CMakeLists.txt  package.xml
ex01/kinematic_unicycle/config/: params.yaml
ex01/kinematic_unicycle/launch/: keyboard_control.launch  straight_line.launch
ex01/kinematic_unicycle/src/: controller.cpp  model.cpp
ex02/: README.md
ex02/robot_2dof/: CMakeLists.txt  package.xml
ex02/robot_2dof/config/: 2dof_actuation.yaml  2dof_params.yaml
ex02/robot_2dof/launch/: 2DoF_control.launch  passive_2DoF.launch  view_2DoF.launch
ex02/robot_2dof/models/: 2DoF_arm.xacro  2DoF_arm_passive.xacro  params_macro.xacro
my_HelloWorld/: README.md
my_HelloWorld/hello_world_pkg/: CMakeLists.txt  package.xml
my_HelloWorld/hello_world_pkg/launch/: pub_sub.launch
my_HelloWorld/hello_world_pkg/src/: publisher.cpp  subscriber.cpp
urdf_tutorial/: README.md
urdf_tutorial/urdf_examples/: CMakeLists.txt  package.xml
urdf_tutorial/urdf_examples/launch/: view_diff_robot.launch  view_pan_tilt.launch
urdf_tutorial/urdf_examples/models/robot_arm/: pan_tilt.urdf
urdf_tutorial/urdf_examples/models/unicycle/: diff_wheeled_robot.xacro  wheel.xacro
