<?xml version="1.0"?>
<package format="2">
  <name>kinematic_unicycle</name>
  <version>0.0.0</version>
  <description>The kinematic_unicycle package</description>

  <maintainer email="daniele@todo.todo">daniele</maintainer>

  <license>TODO</license>

  <!--/// DEPENDENCIES ///-->
  <!--catkin-->
  <buildtool_depend>catkin</buildtool_depend>

  <!--roscpp-->
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <!--std_msgs-->
  <build_depend>std_msgs</build_depend>  
  <build_export_depend>std_msgs</build_export_depend>  
  <exec_depend>std_msgs</exec_depend>

  <!--geometry_msgs-->
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>


  <export>

  </export>
</package>
